--- a/blogs/covid_camping.html
+++ b/blogs/covid_camping.html
@@ -45,28 +45,39 @@
 
 			<nav class="navbar text-center align-items-center justify-content-center">
 
-                <div class="collapse navbar-collapse show" id="navbarCollapse">
-                	<div class="about-avatar mb-4">
-						<img src="../assets/images/about.jpg" alt="" class="img-fluid mx-auto d-block shadow-sm rounded-full">
-					</div>
-                    <ul class="navbar-nav mx-auto">
-                        <li class="nav-item active">
-                            <a class="nav-link" href="../index.html">Home</a>
-                        </li>
-                    </ul>
+        <div class="collapse navbar-collapse show" id="navbarCollapse">
 
-                </div>
+            <ul class="navbar-nav mx-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="../index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="../index.html#about">about</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="../index.html#resume">resume</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="../index.html#work">work</a>
+                </li>
 
-               	<div class="aside-footer">
-                	<ul class="list-unstyled list-inline">
-                        <li class="list-inline-item"><a href="#"><i class="fab fa-github"></i></a></li>
-                        <li class="list-inline-item"><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
-                        <li class="list-inline-item"><a href="#"><i class="fab fa-stack-overflow"></i></a></li>
-                        <li class="list-inline-item"><a href="#"><i class="fab fa-dribbble"></i></a></li>
-                    </ul>
-                </div>
-	        </nav>
+                <li class="nav-item">
+                    <a class="nav-link" href="../index.html#contact">Contact</a>
+                </li>
+            </ul>
+
         </div>
+
+        <div class="aside-footer">
+          <ul class="list-unstyled list-inline">
+                <li class="list-inline-item"><a href="https://github.com/aryan096"><i class="fab fa-github"></i></a></li>
+                <li class="list-inline-item"><a href="https://www.linkedin.com/in/aryan-s-b58598129/"><i class="fab fa-linkedin-in"></i></a></li>
+                <li class="list-inline-item"><a href="https://www.facebook.com/aryansrivastava096"><i class="fab fa-facebook"></i></a></li>
+                <li class="list-inline-item"><a href="#"><i class="fab fa-dribbble"></i></a></li>
+            </ul>
+        </div>
+	     </nav>
+    </div>
         <!-- END: NAVBAR -->
     </aside>
 
